@@ -1,3 +1,9 @@
+2004-09-30  Geoff Norton  <gnorton@customerdna.com>
+
+        * Convert.cs: ConvertToBase* was not endian aware.  Implemented EndianSwap
+        and swapping of all values before going into the BitConverter so that values
+        are returned with proper endianess.
+
 2004-09-23  Martin Garton  <martin@wrasse.demon.co.uk>
 	
 	* Convert.cs: ToType was returning unconverted object when it should
